k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-shop-backend
  namespace: pet-shop
  labels:
    app: pet-shop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-shop-backend
  template:
    metadata:
      labels:
        app: pet-shop-backend
    spec:
      containers:
        - name: app
          image: vinisouza/pet-shop-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 200
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 240
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: pet-shop-backend
  namespace: pet-shop
spec:
  type: NodePort
  selector:
    app: pet-shop-backend
  ports:
    - name: http
      port: 8081
      targetPort: http


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-shop-backend-ingress
  namespace: pet-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.petshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pet-shop-backend
                port:
                  number: 8081
